@@ -1,4 +1,11 @@
 This file lists the incompatible changes between Version 2.x and older versions
+%%%%%%%%%%%%%%%%%%%%%%%%%%%% VERSION 2.8 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+* Specific to the PARI library:
+===============================
+  - renamed RgX_mullow -> RgXn_mul, RgX_sqrlow -> RgXn_sqr,
+    RgX_modXn_eval -> RgXn_eval, RgX_modXn_shallow -> RgXn_shallow
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%% VERSION 2.6 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
   - eval() no longer evaluates its arguments in "permissive" mode: eval("1a")
     now produces a syntax error.
