@@ -734,6 +734,7 @@ GEN     QXQV_to_mod(GEN V, GEN T);
 GEN     QXQXV_to_mod(GEN V, GEN T);
 GEN     QXV_QXQ_eval(GEN v, GEN a, GEN T);
 GEN     QXX_QXQ_eval(GEN v, GEN a, GEN T);
+GEN     Rg_RgX_sub(GEN x, GEN y);
 GEN     Rg_to_RgV(GEN x, long N);
 GEN     RgM_to_RgXV(GEN x, long v);
 GEN     RgM_to_RgXX(GEN x, long v,long w);
@@ -780,12 +781,9 @@ void    RgX_even_odd(GEN p, GEN *pe, GEN *po);
 GEN     RgX_get_0(GEN x);
 GEN     RgX_get_1(GEN x);
 GEN     RgX_inflate(GEN x0, long d);
-GEN     RgX_modXn_shallow(GEN a, long n);
-GEN     RgX_modXn_eval(GEN Q, GEN x, long n);
 GEN     RgX_mul(GEN x,GEN y);
 GEN     RgX_mul_normalized(GEN A, long a, GEN B, long b);
 GEN     RgX_mulXn(GEN x, long d);
-GEN     RgX_mullow(GEN f, GEN g, long n);
 GEN     RgX_muls(GEN y, long x);
 GEN     RgX_mulspec(GEN a, GEN b, long na, long nb);
 GEN     RgX_neg(GEN x);
@@ -800,13 +798,15 @@ GEN     RgX_shift(GEN a, long n);
 GEN     RgX_shift_shallow(GEN x, long n);
 GEN     RgX_splitting(GEN p, long k);
 GEN     RgX_sqr(GEN x);
-GEN     RgX_sqrlow(GEN f, long n);
 GEN     RgX_sqrspec(GEN a, long na);
 GEN     RgX_sub(GEN x, GEN y);
 GEN     RgX_to_RgV(GEN x, long N);
 GEN     RgX_translate(GEN P, GEN c);
 GEN     RgX_unscale(GEN P, GEN h);
-GEN     Rg_RgX_sub(GEN x, GEN y);
+GEN     RgXn_eval(GEN Q, GEN x, long n);
+GEN     RgXn_mul(GEN f, GEN g, long n);
+GEN     RgXn_red_shallow(GEN a, long n);
+GEN     RgXn_sqr(GEN f, long n);
 GEN     ZX_translate(GEN P, GEN c);
 GEN     ZX_unscale(GEN P, GEN h);
 GEN     ZX_unscale_div(GEN P, GEN h);
