@@ -11,9 +11,11 @@ Done for version 2.8.0 (released ??/??/2014):
   Added
     1- add optional argument to sumdigits to specify the base
     2- [libpari] bits_to_int,bits_to_u,binary_zv,binary_2k,binary_2k_zv
-    3- [GP] support for variadic GP functions (f(v[..])=expr)
+BA  3- [GP] support for variadic GP functions (f(v[..])=expr)
     4- nfeltval(K, x, pr, &y) now takes an optional 4th argument, containing
        the part of x coprime to pr.
 
   Changed
     1- make log(+/-I) return (+/-)Pi/2*I with gen_0 real part [#1556]
+BA  2- [libpari] rename RgX_mullow -> RgXn_mul, RgX_sqrlow -> RgXn_sqr,
+    RgX_modXn_eval -> RgXn_eval, RgX_modXn_shallow-> RgXn_red_shallow
